# turtlerec

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
backend-spec/: ROADMAP.md
branding/: BRANDING.md
client-plugin/: Plugin.cs
config/: production.json
configs/: config.json
dashboard/: README.md
deployment/dns/: DOMAINS.md
deployment/docker/: Dockerfile
deployment/nginx/: turtlerec.conf
docs/: API.md  BADGES.md  GUARDIAN_FEATURES.md  GuardianAC.md  NEXT_STEPS.md  PHASE7.md  REQUEST_LOGGING.md  TONIGHT_PROGRESS.md  TURTLE_TODO.md  VPS_SETUP.md
docs/api-stubs/: ENDPOINTS.md
launcher/: README.md  versions.json
launcher/news/: news.json
launcher/update/: version.json
plugins/TurtleRecConnector/: Plugin.cs  TurtleRecConnector.csproj  TurtleRecCustomConnector.cs
src/: main.cpp
src/accounts/: account.cpp  account.h
src/achievements/: achievements.cpp  achievements.h
src/admin/: admin.cpp  admin.h
src/analytics/: analytics.cpp  analytics.h
src/announcements/: announcements.cpp  announcements.h
src/assets/: assets.cpp  assets.h
src/auth/: auth.cpp  auth.h
src/avatar/: avatar.cpp  avatar.h
src/backend2/: backend2.cpp  backend2.h
src/backend3/: backend3.cpp  backend3.h
src/backend4/: backend4.cpp  backend4.h
src/bans/: bans.cpp  bans.h
src/blocklist/: blocklist.cpp  blocklist.h
src/cloudsave/: cloudsave.cpp  cloudsave.h
src/clubs/: clubs.cpp  clubs.h
src/consumables/: consumables.cpp  consumables.h
src/cosmetics/: cosmetics.cpp  cosmetics.h
src/currency/: currency.cpp  currency.h
src/dorms/: dorms.cpp  dorms.h
src/economy/: economy.cpp  economy.h
src/equipment/: equipment.cpp  equipment.h
src/events/: events.cpp  events.h
src/finalsystems/: finalsystems.cpp  finalsystems.h
src/friends/: friends.cpp  friends.h
src/gameplaypack/: gameplaypack.cpp  gameplaypack.h
src/gifts/: gifts.cpp  gifts.h
src/http/: httpserver.cpp  httpserver.h
src/instances/: instances.cpp  instances.h
src/invites/: invites.cpp  invites.h
src/launchpack/: launchpack.cpp  launchpack.h
src/leaderboards/: leaderboards.cpp  leaderboards.h
src/live/: live.cpp  live.h
src/logs/: logs.cpp  (+1 more)
web/: index.html
(+55 files in other folders)
